# Z80DevBoard

./: .gitignore  BOM.csv  CHANGELOG.md  JOURNAL.md  README.md  TODO.md  Z80DevBoard.kicad_pcb  Z80DevBoard.kicad_pro  Z80DevBoard.kicad_sch  fp-lib-table
customFootprints.pretty/: CP_Radial_D8.0mm_P3.50mm.kicad_mod  SW_Slide-03_Wuerth-WS-SLTV.kicad_mod
docs/: advanced.md  conclusions.md  hardware.md  index.md  introduction.md  pinout.md  quickstart.md  technicalInfo.md  z80Assembly.md
docs/pdf/: Z80DevBoard_Documentation_Preparation.html
firmware/: CMakeLists.txt  firmware.c  firmware.h  flash.c  flash.h  main.c  mscDisk.c  mscDisk.h  tusb_config.h  uart.c  uart.h  usb_descriptors.c  usb_descriptors.c.temp
firmware/demo/: HelloWorld.h  NumberSequence.h  Z80DevBoard_DEMO1.uf2  Z80DevBoard_DEMO2.uf2
gerber/: Z80DevBoard-B_Cu.gbr  Z80DevBoard-B_Mask.gbr  Z80DevBoard-B_Paste.gbr  Z80DevBoard-B_Silkscreen.gbr  Z80DevBoard-Edge_Cuts.gbr  Z80DevBoard-F_Cu.gbr  Z80DevBoard-F_Mask.gbr  Z80DevBoard-F_Paste.gbr  Z80DevBoard-F_Silkscreen.gbr  Z80DevBoard-In1_Cu.gbr  Z80DevBoard-In2_Cu.gbr  Z80DevBoard-NPTH.drl  Z80DevBoard-PTH.drl  Z80DevBoard-job.gbrjob
images/: HackClubFlag.kicad_mod  OpenSourceIsLove.kicad_mod  Z80DevBoard.kicad_mod  Z80DevBoard.kicad_sym
